cros: Fix MD OOBE crash

Reset |oobe_ui_| in ShowLoginScreen is legacy code back when there
are separate OobeDisplay and LoginDisplay. OobeDisplay is no longer
needed when login screen is shown. This has changed as there is
only one LoginDisplay and |oobe_ui_| is used for both OOBE and login.
And it should not change during the lifetime of WizardController.

BUG=647742

Review-Url: https://codereview.chromium.org/2341613006
Cr-Commit-Position: refs/heads/master@{#419308}

Former-commit-id: 14947f5240be7a4263819e4d80cf3bef350f51d0